avoid nesting li inside and li linearise the parent menu fix overlapping top level menu.

--- a/META-INF/resources/css/nav_menu.css
+++ b/META-INF/resources/css/nav_menu.css
@@ -135,7 +135,12 @@
     line-height: 30px;
     font-size: 1.0em;
     display: inline-block;
-    margin-right: -4px;
+    white-space: nowrap;
+/* This is probably necessary for multi-level menus but it looks
+ * odd at the top level and we force to 2 levels
+ *
+ *   margin-right: -4px; 
+ */
   }
   
  
